Changelog
15-05-25:
    - Fixed alert with auth error when entering the page after the refresh token expired.
    - Advanced on Reservations page. Created ReservationCard.

08-05-25
    Changes:
    - Added search bar functionality.

25-04-25
    Changes:
    - Fixed auth token updating bug. Added token validation in each request.
    - Fixed showtime capacity amount and updating.
    - Added reservation code creation.

24-04-25
    Changes:
    - Combined SeatSelector and SeatSelectorModal components. Added logic to reserve
    seats. Added a checkout page to perform the reservation.

18-04-25
    Changes:
    - Added a Showtime selector component to let the user select a day and then
    the showtimes of that day.
    - Added a seat selector that appears in a modal when the user selects a showtime.
    - Moved the auth form into a modal. Added the logic to access the modal
    through navbar links and a button.

28-03-25
    
    Changes:
    - Added Register, Login, Logout, Home, and MovieDetails pages.

27-03-25

    Changes:
    - Added base react frontend.


26-03-25

    Changes:
    - Completed ShowtimeCreate view.
    - Organized http files into a folder.
    

21-03-25

    Changes:
    - Adapted some views to migrate frontend to react.

6-03-25

    Changes:
    - Added showtime selector and seat selection page.

25-02-25

    Changes:
    - Added styling to movie details page.

21-02-25

    Changes:
    - Added navbar and styling to index page.

20-02-25
    
    Changes:

    - Added reservation system to movie details page.

    Todo:
    
    - Add VIDEO_ID field to movie model, to display the movie's trailer with the youtube player api.
    


12-02-25

    Changes:

    - Changed index view to list all movies through DRF's TemplateHTMLRenderer.
    - Changed MovieDetails view to render the movie info into a html.

    Todo: Display details of a movie showtime when is clicked. DONE