@@ -85,7 +85,9 @@ INSTALLED_APPS = [
     'django.contrib.sessions',
     'django.contrib.messages',
     'django.contrib.staticfiles',
-    # Main app.
+    # Project apps.
+    'auth_api',
+    'admin_api',
     'api',
     # Third party apps.
     'rest_framework',
